--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,5 +1,39 @@
 
+@article{Abel2016,
+author = {Abel, Gary A and Barclay, Matthew E and Payne, Rupert A},
+doi = {10.1136/bmjopen-2016-012750},
+journal = {BMJ Open},
+month = {nov},
+number = {11},
+pages = {e012750},
+title = {{Adjusted indices of multiple deprivation to enable comparisons within and between constituent countries of the UK including an illustration using mortality rates}},
+url = {https://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2016-012750},
+volume = {6},
+year = {2016}
+}
 
+@article{Arons2020,
+author = {Arons, Melissa M. and Hatfield, Kelly M. and Reddy, Sujan C. and Kimball, Anne and James, Allison and Jacobs, Jesica R. and Taylor, Joanne and Spicer, Kevin and Bardossy, Ana C. and Oakley, Lisa P. and Tanwar, Sukarma and Dyal, Jonathan W. and Harney, Josh and Chisty, Zeshan and Bell, Jeneita M. and Methner, Mark and Paul, Prabasaj and Carlson, Christina M. and McLaughlin, Heather P. and Thornburg, Natalie and Tong, Suxiang and Tamin, Azaibi and Tao, Ying and Uehara, Anna and Harcourt, Jennifer and Clark, Shauna and Brostrom-Smith, Claire and Page, Libby C. and Kay, Meagan and Lewis, James and Montgomery, Patty and Stone, Nimalie D. and Clark, Thomas A. and Honein, Margaret A. and Duchin, Jeffrey S. and Jernigan, John A.},
+title = {Presymptomatic SARS-CoV-2 Infections and Transmission in a Skilled Nursing Facility},
+journal = {New England Journal of Medicine},
+volume = {382},
+number = {22},
+pages = {2081-2090},
+year = {2020},
+doi = {10.1056/NEJMoa2008457}
+}
+
+@article{Blain2020,
+title = "Efficacy of a Test-Retest Strategy in Residents and Health Care Personnel of a Nursing Home Facing a COVID-19 Outbreak",
+journal = "Journal of the American Medical Directors Association",
+volume = "21",
+number = "7",
+pages = "933 - 936",
+year = "2020",
+issn = "1525-8610",
+doi = "https://doi.org/10.1016/j.jamda.2020.06.013",
+author = "Hubert Blain and Yves Rolland and Edouard Tuaillon and Nadia Giacosa and Mylène Albrand and Audrey Jaussent and Athanase Benetos and Stéphanie Miot and Jean Bousquet"
+}
 
 @article {Brown2020,
 	author = {Brown, Kevin A and Jones, Aaron and Daneman, Nick and Chan, Adrienne K and Schwartz, Kevin L and Garber, Gary E and Costa, Andrew and Stall, Nathan M},
@@ -7,6 +41,18 @@
 	year = {2020},
 	doi = {10.1101/2020.06.23.20137729},
 	journal = {medRxiv}
+}
+
+@article{Burton2020,
+author = {Burton, Jennifer K and Bayne, Gwen and Evans, Christine and Garbe, Frederike and Gorman, Dermot and Honhold, Naomi and McCormick, Duncan and Othieno, Richard and Stevenson, Janet E and Swietlik, Stefanie and Templeton, Kate E and Tranter, Mette and Willocks, Lorna and Guthrie, Bruce},
+doi = {10.1016/S2666-7568(20)30012-X},
+journal = {The Lancet Healthy Longevity},
+month = {oct},
+number = {1},
+pages = {e21--e31},
+title = {{Evolution and effects of COVID-19 outbreaks in care homes: A population analysis in 189 care homes in one geographical region of the UK}},
+volume = {1},
+year = {2020}
 }
 
 @article{Chen2006,
@@ -35,11 +81,40 @@ volume = {69},
 year = {2020}
 }
 
-@unpublished{Easter6,
-title = {{Investigation of SARS-CoV-2 Outbreaks in Six Care Homes in London: The Easter 6 Care Home Investigation}},
-year = 2020,
-author= {Shamez Ladhani and Maria Zambon and Nandini Shetty and Meera Chand and Richard Myers and Mark Driver and Gwyn Morris and Lynne Foster and Kevin Brown and Mary Ramsay and Susan Hopkins and Yimmy Chow and Edward Wynne-Evans and Anita Bell and Emma Crawley-Boevey and Jonathan Fok and Roshni Janarthanan and Amoolya Vusirikala and Elena Fernandez and Marina Sanchez Perez and Suzanne Tang and Kate Dun-Campbell and Karthik Paranthaman and Thomas Ma and Maria Saavedra-Campos and Alex Allen}}
+@article{Easter6,
+title = {Increased risk of SARS-CoV-2 infection in staff working across different care homes: enhanced COVID-19 outbreak investigations in London care Homes},
+journal = "Journal of Infection",
+volume = "81",
+number = "4",
+pages = "621 - 624",
+year = "2020",
+issn = "0163-4453",
+doi = "https://doi.org/10.1016/j.jinf.2020.07.027",
+author = "Shamez N Ladhani and J. Yimmy Chow and Roshni Janarthanan and Jonathan Fok and Emma Crawley-Boevey and Amoolya Vusirikala and Elena Fernandez and Marina Sanchez Perez and Suzanne Tang and Kate Dun-Campbell and Edward Wynne-Evans and Anita Bell and Bharat Patel and Zahin Amin-Chowdhury and Felicity Aiano and Karthik Paranthaman and Thomas Ma and Maria Saavedra-Campos and Richard Myers and Joanna Ellis and Angie Lackenby and Robin Gopal and Monika Patel and Meera Chand and Kevin Brown and Susan Hopkins and CoG Consortium and Nandini Shetty and Maria Zambon and Mary E Ramsay"
+}
 
+@article{Fisman2020,
+author = {Fisman, David N. and Bogoch, Isaac and Lapointe-Shaw, Lauren and McCready, Janine and Tuite, Ashleigh R.},
+title = {Risk Factors Associated With Mortality Among Residents With Coronavirus Disease 2019 (COVID-19) in Long-term Care Facilities in Ontario, Canada},
+journal = {JAMA Network Open},
+volume = {3},
+number = {7},
+pages = {e2015957-e2015957},
+year = {2020},
+month = {07},
+doi = {10.1001/jamanetworkopen.2020.15957}
+}
+
+@article {Flower2020,
+author = {Flower, Barnaby and Brown, Jonathan C and Simmons, Bryony and Moshe, Maya and Frise, Rebecca and Penn, Rebecca and Kugathasan, Ruthiran and Petersen, Claire and Daunt, Anna and Ashby, Deborah and Riley, Steven and Atchison, Christina Joanne and Taylor, Graham P and Satkunarajah, Sutha and Naar, Lenny and Klaber, Robert and Badhan, Anjna and Rosadas, Carolina and Khan, Maryam and Fernandez, Natalia and Sureda-Vives, Maci{\`a} and Cheeseman, Hannah M and O{\textquoteright}Hara, Jessica and Fontana, Gianluca and Pallett, Scott J C and Rayment, Michael and Jones, Rachael and Moore, Luke S P and McClure, Myra O and Cherepanov, Peter and Tedder, Richard and Ashrafian, Hutan and Shattock, Robin and Ward, Helen and Darzi, Ara and Elliot, Paul and Barclay, Wendy S and Cooke, Graham S},
+	title = {Clinical and laboratory evaluation of SARS-CoV-2 lateral flow assays for use in a national COVID-19 seroprevalence survey},
+	volume = {75},
+	number = {12},
+	pages = {1082--1088},
+	year = {2020},
+	doi = {10.1136/thoraxjnl-2020-215732},
+	journal = {Thorax}
+}
 
 @article{Graham2020,
 title = {{SARS-CoV-2 infection, clinical features and outcome of COVID-19 in United Kingdom nursing homes}},
@@ -48,7 +123,6 @@ year = "2020",
 doi = " 10.1016/j.jinf.2020.05.073",
 author = "N.S.N. Graham and C. Junghans and R. Downes and C. Sendall and H. Lai and A. McKirdy and P. Elliott and R. Howard and D. Wingfield and M. Priestman and M. Ciechonska and L. Cameron and M. Storch and M.A. Crone and P.S. Freemont and P. Randell and R. McLaren and N. Lang and S. Ladhani and F. Sanderson and D.J. Sharp"
 }
-
 
 @article{He2020,
 author = {He, Xi and Lau, Eric H. Y. and Wu, Peng and Deng, Xilong and Wang, Jian and Hao, Xinxin and Lau, Yiu Chung and Wong, Jessica Y. and Guan, Yujuan and Tan, Xinghua and Mo, Xiaoneng and Chen, Yanqing and Liao, Baolin and Chen, Weilie and Hu, Fengyu and Zhang, Qing and Zhong, Mingqiu and Wu, Yanrong and Zhao, Lingzhai and Zhang, Fuchun and Cowling, Benjamin J. and Li, Fang and Leung, Gabriel M.},
@@ -60,9 +134,17 @@ month = {may},
 number = {5},
 pages = {672--675},
 title = {{Temporal dynamics in viral shedding and transmissibility of COVID-19}},
-url = {http://www.nature.com/articles/s41591-020-0869-5},
 volume = {26},
 year = {2020}
+}
+
+@article{Hollinghurst2020,
+author = {Hollinghurst, Joe and Lyons, Jane and Fry, Richard and Akbari, Ashley and Gravenor, Mike and Watkins, Alan and Verity, Fiona and Lyons, Ronan A},
+title = {The impact of COVID-19 on adjusted mortality risk in care homes for older adults in Wales, UK: A retrospective population-based cohort study for mortality in 2016–2020},
+journal = {Age and Ageing},
+year = {2020},
+month = {09},
+doi = {10.1093/ageing/afaa207}
 }
 
 @article{KaiWang2020,
@@ -126,6 +208,7 @@ pages = {2005-2011},
 year = {2020},
 doi = {10.1056/NEJMoa2005412}
 }
+
 
 @Article{Moraga2020, AUTHOR = { Moraga, P and Ketcheson, DI and Ombao, HC and Duarte, CM}, TITLE = {{Assessing the age- and gender-dependence of the severity and case fatality rates of COVID-19 disease in Spain [version 1; peer review: awaiting peer review] }}, JOURNAL = {Wellcome Open Research}, VOLUME = {5}, YEAR = {2020}, NUMBER = {117}, DOI = {10.12688/wellcomeopenres.15996.1} }
 
@@ -340,8 +423,9 @@ url = {https://www.laingbuisson.com/}
 
 @misc{Dutey2020,
  title={{Covid-19 infection and attributable mortality in UK long term care facilities: Cohort study using active surveillance and electronic records (March-June 2020)}},
- url={https://github.com/peterdutey/ch-covid19},
- publisher={Code repository},
+ doi={10.5281/zenodo.3947780},
+ type={computer code},
+ publisher={Zenodo},
  author={Dutey-Magni, Peter and Shallcross, Laura},
  year={2020}
 }
