--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -422,7 +422,7 @@ url = {https://www.laingbuisson.com/}
 # Software
 
 @misc{Dutey2020,
- title={{Covid-19 infection and attributable mortality in UK long term care facilities: Cohort study using active surveillance and electronic records (March-June 2020)}},
+ title={{COVID-19 infection and attributable mortality in UK long term care facilities: Cohort study using active surveillance and electronic records (March-June 2020)}},
  doi={10.5281/zenodo.3947780},
  type={computer code},
  publisher={Zenodo},
