first batch corrections from A&A

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -236,6 +236,17 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.3022},
 year = {2008}
 }
 
+@article{Sanford2015,
+title = {An International Definition for "Nursing Home"},
+journal = {Journal of the American Medical Directors Association},
+volume = 16,
+number = 3,
+pages = {181-184},
+year = 2015,
+doi = {10.1016/j.jamda.2014.12.013},
+author = {Angela M. Sanford and Martin Orrell and Debbie Tolson and Angela Marie Abbatecola and Hidenori Arai and Juergen M. Bauer and Alfonso J. Cruz-Jentoft and Birong Dong and Hyuk Ga and Ashish Goel and Ramzi Hajjar and Iva Holmerova and Paul R. Katz and Raymond T.C.M. Koopmans and Yves Rolland and Renuka Visvanathan and Jean Woo and John E. Morley and Bruno Vellas}
+}
+
 @article{Smith2020,
 author = {Smith, Catherine M. and Williams, Haydn and Jhass, Arnoupe and Patel, Selina and Crayton, Elise and Lorencatto, Fabiana and Michie, Susan and Hayward, Andrew C. and Shallcross, Laura J.},
 doi = {10.1186/s12913-020-05422-z},
@@ -351,7 +362,7 @@ note = {Accessed: 2020-06-17}
 
 @misc{cqcdata2020,
 author = {{England Care Quality Commission}},
-title = "Care directory with filters",
+title = {Care directory with filters},
 year = 2020,
 url = {https://www.cqc.org.uk/sites/default/files/HSCA_Active_Locations_01_June_2020.xlsx},
 note = {Accessed: 2020-06-17}
